--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
     "firebase": "^10.13.0",
     "firebase-admin": "^12.4.0",
     "midtrans-client": "^1.3.1",
+    "next": "14.2.15",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15",
     "react-firebase-hooks": "^5.1.1",
     "redis": "^4.7.0",
     "three": "^0.163.0",
     "winston": "^3.14.2"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/react": "18.3.11",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "eslint-config-next": "14.2.15",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
