add eslint plugin for react and react-hooks

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,44 @@
 {
-  "extends": "next/core-web-vitals",
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:react/recommended"
+  ],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react",
+    "react-hooks"
+  ],
   "rules": {
-    "no-undef": "error"
+    "react/prop-types": "off",  // Disable prop-types rule
+    "react/react-in-jsx-scope": "off",  // React 17+ does not require React to be in scope
+    "react/jsx-uses-react": "off",  // Disable in React 17+
+    "react/jsx-uses-vars": "error",  // Prevent variables used in JSX from being incorrectly marked as unused
+    "react/jsx-indent": ["error", 2],  // Enforce 2-space indentation in JSX
+    "react/jsx-no-duplicate-props": "error",  // Prevent duplicate props in JSX
+    "react/no-unused-state": "warn",  // Warn about unused state
+    "react/no-direct-mutation-state": "error",  // Disallow direct mutation of `this.state`
+
+    // React Hooks specific rules
+    "react-hooks/rules-of-hooks": "error",  // Enforce the Rules of Hooks
+    "react-hooks/exhaustive-deps": "warn",  // Warn about missing dependencies in useEffect
+
+    "no-undef": "error",
+    "no-unused-vars": "warn",
+    "semi": ["warn", "always"]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"  // Automatically detect the React version
+    }
   }
 }
