--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/react": "18.3.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
